--- a/package.json
+++ b/package.json
@@ -1,5 +1,32 @@
 {
+	"author": {
+		"name": "lusc",
+		"url": "https://github.com/melusc"
+	},
+	"dependencies": {
+		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
+		"@eslint/js": "^9.14.0",
+		"eslint-plugin-n": "^17.12.0",
+		"eslint-plugin-promise": "^7.1.0",
+		"eslint-plugin-unicorn": "^56.0.0",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.13.0"
+	},
+	"devDependencies": {
+		"eslint": "^9.14.0",
+		"prettier": "^3.3.3"
+	},
+	"exports": {
+		".": "./index.js"
+	},
+	"files": [
+		"*.js"
+	],
 	"name": "@lusc/eslint-config",
-	"type": "module",
-	"packageManager": "yarn@4.5.1"
+	"packageManager": "yarn@4.5.1",
+	"scripts": {
+		"fmt": "prettier -w .",
+		"lint": "eslint --fix ."
+	},
+	"type": "module"
 }
