--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 		"eslint-plugin-n": "^17.12.0",
 		"eslint-plugin-promise": "^7.1.0",
 		"eslint-plugin-unicorn": "^56.0.0",
+		"globals": "^15.12.0",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.13.0"
 	},
 	"devDependencies": {
+		"@types/eslint": "^9.6.1",
 		"eslint": "^9.14.0",
 		"prettier": "^3.3.3"
 	},
@@ -22,6 +24,7 @@
 	"files": [
 		"*.js"
 	],
+	"license": "MIT",
 	"name": "@lusc/eslint-config",
 	"packageManager": "yarn@4.5.1",
 	"scripts": {
