--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
 	"publishConfig": {
 		"access": "public"
 	},
+	"repository": {
+		"url": "https://github.com/melusc/eslint-config"
+	},
 	"scripts": {
 		"fmt": "prettier -w .",
 		"lint": "eslint --fix"
