--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
 	"dependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
 		"@eslint/js": "^9.14.0",
+		"@typescript-eslint/parser": "^8.13.0",
+		"eslint-import-resolver-typescript": "^3.6.3",
+		"eslint-plugin-import-x": "^4.4.0",
 		"eslint-plugin-n": "^17.13.1",
 		"eslint-plugin-promise": "^7.1.0",
 		"eslint-plugin-unicorn": "^56.0.0",
