--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.15.0"
 	},
+	"peerDependencies": {
+		"eslint": "^9"
+	},
 	"devDependencies": {
 		"eslint": "^9.15.0",
 		"prettier": "^3.3.3"
