--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"eslint-plugin-n": "^17.15.1",
 		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-regexp": "^2.7.0",
+		"eslint-plugin-security": "^3.0.1",
 		"eslint-plugin-unicorn": "^56.0.1",
 		"globals": "^15.15.0",
 		"typescript": "^5.7.3",
