--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	},
 	"dependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
+		"@eslint/css": "^0.5.0",
 		"@eslint/js": "^9.22.0",
 		"@typescript-eslint/parser": "^8.26.1",
 		"eslint-import-resolver-typescript": "^4.2.2",
