--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
 	"repository": {
 		"url": "https://github.com/melusc/eslint-config"
 	},
+	"engines": {
+		"node": "^22.14.0 || ^23.10.0"
+	},
 	"scripts": {
 		"fmt": "prettier -w .",
 		"lint": "eslint --fix"
