--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,10 @@ jobs:
         run: corepack enable
 
       - name: Install dependencies
-        run: yarn install --immutable
+        run: pnpm install --frozen-lockfile
 
       - name: Check code style
         run: |
-          node --run fmt
-          node --run lint
+          pnpm fmt
+          pnpm lint
           git --no-pager diff --exit-code
